--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "predeploy": "npm run build && echo michaelpuelle.tk > ./build/CNAME",
+    "predeploy": "npm run build && echo michaelpuelle.tk > ./.next/CNAME",
     "deploy": "gh-pages -d build",
     "dev": "next dev",
     "build": "next build",
@@ -14,9 +14,11 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
+    "gh-pages": "^3.2.3",
     "next": "11.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
